[package]
name = "cldi"
version = "0.5.4"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["cargo"] }
clap_complete = "4.2"
hex = "0.4"
tokio = { version = "1.27", features = ["full"] }
rand = "0.8"
tonic = "0.9"
prost = "0.11"
time = { version = "0.3", features = ["formatting", "local-offset"] }
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
thiserror = "1.0"
anyhow = "1.0"
home = "0.5"
indicatif = "0.17"
rayon = "1.7"
tentacle-multiaddr = "0.3"
toml = "0.7"
rustyline = "11.0"
shell-words = "1.1"
parking_lot = "0.12"
crossbeam = "0.8"
tempfile = "3.5"
# crypto SM
libsm = "0.5.0"
efficient-sm2 = "0.2"
# crypto ETH
aes = "0.8"
ctr = "0.9"
tiny-keccak = { version = "2.0", features = ["keccak"] }
secp256k1 = { version = "0.27", features = ["rand-std", "recovery"] }
# ethabi cli
ethabi = "18.0"
sha3 = "0.10"
itertools = "0.10"
# legacy
rustbreak = { version = "2.0", features = ["ron_enc"] }
rlp = "0.5"
overlord = "0.4"

cita_cloud_proto = { package = "cita_cloud_proto", git = "https://github.com/cita-cloud/cloud-common-rs" }

[dev-dependencies]
mockall = "0.11"

[profile.release]
lto = true
