[package]
name = "cldi"
version = "0.6.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["cargo"] }
clap_complete = "4.4"
hex = "0.4"
tokio = { version = "1.32", features = ["full"] }
rand = "0.8"
tonic = "0.10"
prost = "0.12"
time = { version = "0.3", features = ["formatting", "local-offset"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
thiserror = "1.0"
anyhow = "1.0"
home = "0.5"
indicatif = "0.17"
rayon = "1.8"
tentacle-multiaddr = "0.3"
toml = "0.8"
rustyline = "12.0"
shell-words = "1.1"
parking_lot = "0.12"
crossbeam = "0.8"
tempfile = "3.8"
# crypto SM
libsm = "0.5"
efficient-sm2 = "0.2"
# crypto ETH
aes = "0.8"
ctr = "0.9"
# ethabi cli
ethabi = "18.0"
itertools = "0.11"
rlp = "0.5"
static_merkle_tree = "1.1"
ethereum-types = "0.14"
ophelia = "0.3"
overlord = "0.4"
ophelia-blst = "0.3"
cita-crypto = "0.1"
sha3 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
secp256k1 = { version = "0.28", features = ["rand-std", "recovery"] }
hashable = { package = "cita-hashable", version = "0.1" }
# legacy
rustbreak = { version = "2.0", features = ["ron_enc"] }
cita-merklehash = { version = "0.1", features = ["sm3hash"] }
bytes = { version = "1.5", features = ["serde"] }
bloomchain = "0.2"
eth-jsonrpc-lib = "0.3.0"

cita_cloud_proto = { git = "https://github.com/cita-cloud/cloud-common-rs" }
libproto = { git = "https://github.com/cita-cloud/libproto" }

[target.'cfg(not(target_os = "macos"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
mockall = "0.11"

[profile.release]
lto = true

[features]
default = ["sm2", "sm3hash"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1"]
sm2 = ["cita-crypto/sm2", "libproto/sm2"]
sha3hash = ["hashable/sha3hash", "libproto/sha3hash"]
sm3hash = ["hashable/sm3hash", "libproto/sm3hash"]
