# Copyright Rivtower Technologies LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cloud-client"
version = "0.1.0"
authors = ["Zhishi <whfuyn@outlook.com>"]
edition = "2018"

[features]
default = ["evm"]
evm = []
chaincode = []

[dependencies]
cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto" }
hex = "0.4"
tonic = "0.4"
prost = "0.7"
rand = "0.8.3"
tokio = { version = "1.3", features = ["full"] }
libsm = "0.4.0"
efficient-sm2 = { git = "https://github.com/Pencil-Yao/efficient-sm2" }
chrono = "0.4.19"
serde_json = "1.0.64"

[build-dependencies]
tonic-build = { version = "0.3" }
